# lpa-output

./: .gitignore  CITATION.cff  README.md  setup.cfg  setup.py
src/lpa/output/: __init__.py  analyze.py  collect.py  filters.py  models.py  run.py
tests/: test_analyze.py  test_collect.py  test_filters.py  test_models.py
tests/fits/10_rho5e14m-2_square_2000nm_RDD_d5e-4nm-2_edge_PBCR2_S0/: 10_rho5e14m-2_square_2000nm_RDD_d5e-4nm-2_edge_PBCR2_S0_Groma.csv  10_rho5e14m-2_square_2000nm_RDD_d5e-4nm-2_edge_PBCR2_S0_Kamminga.csv  10_rho5e14m-2_square_2000nm_RDD_d5e-4nm-2_edge_PBCR2_S0_WC.csv
