[metadata]
name = lpa-output
version = attr: lpa.output.__version__
author = Dunstan Becht
author_email = dunstan@becht.network
description = Tools for the analysis of X-ray diffraction simulation output.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DunstanBecht/lpa-output
project_urls =
    Bug Tracker = https://github.com/DunstanBecht/lpa-output/issues
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir =
    =src
packages = find_namespace:
install_requires =
    numpy==1.21.1
    matplotlib==3.4.2
    beartype==0.7.1
    scipy==1.21.1

[options.packages.find]
where = src
